--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 
         <div class="about-me">
           <div class="about-text">
-            Hello again! My name is <strong>Nashid</strong> and I'm currently working as a Development Lead at <a class="fancy-link" target="_blank" rel="noreferrer" href="https://www.people10.com/">People10</a>.
+            Hello again! My name is <strong>Nashid</strong> and I'm currently working as a Development Lead at <a class="fancy-link" target="_blank" rel="noreferrer" href="https://www.people10.com/">People10 <i class="fas fa-external-link-alt"></i></a>.
             I'm a full stack developer with frontend being my forte. I was merely 10 years old when I discovered coding, and though I really loved it,
             my yearning for a new challenge landed me in the Electrical & Electronics Engineering department in college.
             Nevertheless, I just couldn't let go of Computer Science, and my interest in it eventually lead me back to the field.
             During my free time, you can either find me in the football field or reading up on books about anthropology / political science.
-            I also enjoy answering questions on <a class="fancy-link" target="_blank" rel="noreferrer" href="https://stackoverflow.com/users/9739129/nash11">StackOverflow</a> so feel free to direct me to any of your questions.
+            I also enjoy answering questions on <a class="fancy-link" target="_blank" rel="noreferrer" href="https://stackoverflow.com/users/9739129/nash11">StackOverflow <i class="fas fa-external-link-alt"></i></a>, so feel free to direct me to any of your questions.
             Interested in my professional background? Download my resume below.
           </div>
           <a class="fancy-button" href="pdf/2020 Resume.pdf" download="Nashid Ahmed Shah's resume">
