Fixed nav outside click on mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </a>
 
     <!-- Header -->
-    <header data-include="header">
+    <header>
       <!-- Navigation links -->
       <div id="nav-links" class="nav-links">
         <a id="nav-home" href="#home" class="nav-home fancy-link">HOME</a>
@@ -59,10 +59,10 @@
 
       <!-- Logo and designation -->
       <div class="brand-container">
-        <div class="brand">
+        <a class="brand" href="#home">
           <img class="logo" src="img/N lightning logo.svg" width="40px" height="40px" alt="Website logo" />
           <img class="brand-designation" src="img/brand-designation.svg" width="180px" height="40px" alt="Name & designation" />
-        </div>
+        </a>
       </div>
     </header>
 
