Added sitemap and updated pdf names

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             I also enjoy answering questions on <a class="fancy-link" target="_blank" rel="noreferrer" href="https://stackoverflow.com/users/9739129/nash11">StackOverflow <i class="fas fa-external-link-alt"></i></a>, so feel free to direct me to any of your questions.
             Interested in my professional background? Download my resume below.
           </div>
-          <a class="fancy-button" href="pdf/2020 Resume.pdf" download="Nashid Ahmed Shah's resume">
+          <a class="fancy-button" href="pdf/professional_resume.pdf" download="Nashid Ahmed Shah's resume">
             <i class="fas fa-file-download"></i>
             DOWNLOAD RESUME
           </a>
