--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8" />
     <base href="/">
 
+    <link rel="preload" as="image" href="img/preloader-img.webp">
     <link rel="stylesheet" type="text/css" href="assets/css/preloader.css" inline>
     <link rel="shortcut icon" href="img/N lightning logo.svg" type="image/x-icon">
   </head>
