--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
           For a more comprehensive view of my professional background and experiences, I encourage you to download my
           resume. It provides insights into my work, skills, and accomplishments. You can find my resume <a
-            class="fancy-link" target="_blank" rel="noreferrer" href="pdf/2020 Resume.pdf">here <i
+            class="fancy-link" target="_blank" rel="noreferrer" href="pdf/2023_Resume.pdf">here <i
               class="fas fa-external-link-alt"></i></a>.
           <br />
 
@@ -131,7 +131,7 @@
           opportunities in the world of technology.
           <br />
         </div>
-        <a class="fancy-button" href="pdf/2020 Resume.pdf" download="Nashid Ahmed Shah's resume">
+        <a class="fancy-button" href="pdf/2023_Resume.pdf" download="Nashid Ahmed Shah's resume">
           <i class="fas fa-file-download"></i>
           DOWNLOAD RESUME
         </a>
@@ -302,11 +302,6 @@
 
   <!-- Main JS file -->
   <script type="module" src="js/app.min.js" async></script>
-
-  <!-- Google Maps API -->
-  <script src="assets/js/init-map.js" inline></script>
-  <link rel="preconnect" href="https://maps.gstatic.com">
-  <link rel="dns-prefetch" href="https://maps.gstatic.com">
 
   <!-- Polyfills -->
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
