--- a/index.html
+++ b/index.html
@@ -207,16 +207,24 @@
       </div>
       <hr />
       <div class="social-media text-center animatable fadeInUp">
-        <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/nashid-shah/"><i title="LinkedIn"
-            class="fab fa-linkedin"></i></a>
-        <a target="_blank" rel="noreferrer" href="https://www.facebook.com/nashid.ahmed.5/"><i title="Facebook"
-            class="fab fa-facebook-f"></i></a>
-        <a target="_blank" rel="noreferrer" href="https://www.instagram.com/nashid115/"><i title="Instagram"
-            class="fab fa-instagram"></i></a>
-        <a target="_blank" rel="noreferrer" href="https://t.me/Nacho115"><i title="Telegram"
-            class="fab fa-telegram-plane"></i></a>
-        <a target="_blank" rel="noreferrer" href="https://www.twitter.com/lonewolf_115"><i title="Twitter"
-            class="fab fa-twitter"></i></a>
+        <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/nashid-shah/">
+          <i title="LinkedIn" class="fab fa-linkedin"></i>
+        </a>
+        <a target="_blank" rel="noreferrer" href="https://www.facebook.com/nashid.ahmed.5/">
+          <i title="Facebook" class="fab fa-facebook-f"></i>
+        </a>
+        <a target="_blank" rel="noreferrer" href="https://www.instagram.com/nashid115/">
+          <i title="Instagram" class="fab fa-instagram"></i>
+        </a>
+        <a target="_blank" rel="noreferrer" href="https://t.me/Nacho115">
+          <i title="Telegram" class="fab fa-telegram-plane"></i>
+        </a>
+        <a target="_blank" rel="noreferrer" href="https://www.twitter.com/lonewolf_115">
+          <i title="Twitter" class="fab fa-x-twitter"></i>
+        </a>
+        <a target="_blank" rel="noreferrer" href="https://discordapp.com/users/810534888842592266">
+          <i title="Discord" class="fab fa-discord"></i>
+        </a>
       </div>
       <!-- Use when email is configured -->
       <!-- <div class="email-form">
@@ -285,7 +293,9 @@
           <br />
           <a target="_blank" rel="noreferrer" href="https://t.me/Nashid115">Telegram</a>
           <br />
-          <a target="_blank" rel="noreferrer" href="https://www.twitter.com/Nashid1154">Twitter</a>
+          <a target="_blank" rel="noreferrer" href="https://www.twitter.com/lonewolf_115">Twitter</a>
+          <br />
+          <a target="_blank" rel="noreferrer" href="https://discordapp.com/users/810534888842592266">Discord</a>
         </div>
       </div>
     </div>
