Changed facebook icon

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <i title="LinkedIn" class="fab fa-linkedin"></i>
         </a>
         <a target="_blank" rel="noreferrer" href="https://www.facebook.com/nashid.ahmed.5/">
-          <i title="Facebook" class="fab fa-facebook-f"></i>
+          <i title="Facebook" class="fab fa-facebook"></i>
         </a>
         <a target="_blank" rel="noreferrer" href="https://www.instagram.com/nashid115/">
           <i title="Instagram" class="fab fa-instagram"></i>
